--- a/test.html
+++ b/test.html
@@ -14,5 +14,12 @@
     <div>第三次提交</div>
     <div>this is sub</div>
 </body>
+<script>
+    function test() {
+        var str = 'this is test';
+        console.log(str);
+
+    }
+</script>
 
 </html>
