--- a/test.html
+++ b/test.html
@@ -17,7 +17,8 @@
 <script>
     function test() {
         var str = 'this is test';
-        console.log(str);
+        var str1 = 'this is sub'
+        console.log(str, str1);
 
     }
 </script>
