--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 </body>
 <script>
     function test() {
-        var str = 'this is test';
+        var str = 'this is master';
         var str1 = 'this is sub'
         console.log(str, str1);
 
