--- a/testA.html
+++ b/testA.html
@@ -12,7 +12,8 @@
     <div>this is master</div>
     <div>第一次提交</div>
     <div>第三次提交</div>
-    <div>this is sub</div>
+    <div>第四次提交</div>
+    <div>this is master</div>
 </body>
 <script>
     function test() {
