--- a/testA.html
+++ b/testA.html
@@ -13,6 +13,7 @@
     <div>第一次提交</div>
     <div>第三次提交</div>
     <div>第四次提交</div>
+    <div>第五次提交</div>
     <div>this is master</div>
 </body>
 <script>
